// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Trace Config component renders empty trace config 1`] = `
<div>
  <div
    className="euiAccordion"
    data-test-subj="traceGroupsAccordion"
    onToggle={[Function]}
  >
    <div
      className="euiAccordion__triggerWrapper"
    >
      <button
        aria-controls="traceGroups"
        aria-expanded={false}
        className="euiAccordion__button"
        id="random_html_id"
        onClick={[Function]}
        type="button"
      >
        <span
          className="euiAccordion__iconWrapper"
        >
          <svg
            aria-hidden={true}
            className="euiIcon euiIcon--medium euiIcon-isLoading euiAccordion__icon"
            focusable="false"
            height={16}
            role="img"
            style={null}
            viewBox="0 0 16 16"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          />
        </span>
        <span
          className="euiIEFlexWrapFix"
        >
          <div
            className="euiText euiText--small"
          >
            <h3>
              Trace groups
               
              <span
                className="euiBadge euiBadge--iconLeft"
                data-test-subj="traceGroupsCountBadge"
                style={
                  Object {
                    "backgroundColor": "#d3dae6",
                    "color": "#000",
                  }
                }
                title="0"
              >
                <span
                  className="euiBadge__content"
                >
                  0
                </span>
              </span>
            </h3>
          </div>
          <div
            className="euiSpacer euiSpacer--s"
          />
          <div
            className="euiText euiText--small"
          >
            <div
              className="euiTextColor euiTextColor--subdued"
            >
              Constrain your application to specific trace groups
            </div>
          </div>
        </span>
      </button>
      <div
        className="euiAccordion__optionalAction"
      >
        <button
          className="euiButton euiButton--primary euiButton--small euiButton-isDisabled"
          data-test-subj="clearTraceGroupsButton"
          disabled={true}
          onClick={[Function]}
          style={
            Object {
              "minWidth": undefined,
            }
          }
          type="button"
        >
          <span
            className="euiButtonContent euiButton__content"
          >
            <span
              className="euiButton__text"
            >
              Clear all
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      aria-labelledby="random_html_id"
      className="euiAccordion__childWrapper"
      id="traceGroups"
      role="region"
      tabIndex={-1}
    >
      <div>
        <div
          className="euiAccordion__padding--l"
        >
          <div
            className="euiFormRow"
            id="random_html_id-row"
          >
            <div
              className="euiFormRow__labelWrapper"
            >
              <label
                className="euiFormLabel euiFormRow__label"
                htmlFor="random_html_id"
              >
                Trace Groups
              </label>
            </div>
            <div
              className="euiFormRow__fieldWrapper"
            >
              <div
                aria-describedby="random_html_id-help-0"
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-label="Select trace groups"
                className="euiComboBox"
                data-test-subj="traceGroupsComboBox"
                onKeyDown={[Function]}
                role="combobox"
              >
                <div
                  className="euiFormControlLayout"
                >
                  <div
                    className="euiFormControlLayout__childrenWrapper"
                  >
                    <div
                      className="euiComboBox__inputWrap"
                      data-test-subj="comboBoxInput"
                      onClick={[Function]}
                      tabIndex={-1}
                    >
                      <p
                        className="euiComboBoxPlaceholder"
                      >
                        Select or add trace groups
                      </p>
                      <div
                        className="euiComboBox__input"
                        style={
                          Object {
                            "display": "inline-block",
                            "fontSize": 14,
                          }
                        }
                      >
                        <input
                          aria-controls=""
                          data-test-subj="comboBoxSearchInput"
                          id="random_html_id"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          role="textbox"
                          style={
                            Object {
                              "boxSizing": "content-box",
                              "width": "2px",
                            }
                          }
                          value=""
                        />
                        <div
                          style={
                            Object {
                              "height": 0,
                              "left": 0,
                              "overflow": "scroll",
                              "position": "absolute",
                              "top": 0,
                              "visibility": "hidden",
                              "whiteSpace": "pre",
                            }
                          }
                        />
                      </div>
                    </div>
                    <div
                      className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                    >
                      <button
                        aria-label="Open list of options"
                        className="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                        data-test-subj="comboBoxToggleListButton"
                        onClick={[Function]}
                        type="button"
                      >
                        <svg
                          aria-hidden={true}
                          className="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                          focusable="false"
                          height={16}
                          role="img"
                          style={null}
                          viewBox="0 0 16 16"
                          width={16}
                          xmlns="http://www.w3.org/2000/svg"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="euiFormHelpText euiFormRow__text"
                id="random_html_id-help-0"
              >
                Select one or multiple trace groups, or type a custom one
              </div>
            </div>
          </div>
          <div
            className="euiSpacer euiSpacer--l"
          />
          <div
            className="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
          >
            <div
              className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                className="euiFlexItem euiFlexItem--flexGrow10"
              >
                <div
                  className="euiText euiText--medium"
                >
                  <span
                    className="panel-title"
                  >
                    Latency by trace group
                  </span>
                  <span
                    className="panel-title-count"
                  >
                     (0)
                  </span>
                </div>
              </div>
              <div
                className="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <button
                  className="euiLink euiLink--primary"
                  data-test-subj="dashboard-table-percentile-button-1"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <div
                    className="euiText euiText--extraSmall"
                  >
                    <span
                      style={
                        Object {
                          "color": "#957ac9",
                        }
                      }
                    >
                      □
                    </span>
                     &lt; 95 percentile
                  </div>
                </button>
              </div>
              <div
                className="euiFlexItem euiFlexItem--flexGrow1"
              />
              <div
                className="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <button
                  className="euiLink euiLink--primary"
                  data-test-subj="dashboard-table-percentile-button-2"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <div
                    className="euiText euiText--extraSmall"
                  >
                    <span
                      style={
                        Object {
                          "color": "#957ac9",
                        }
                      }
                    >
                      ■
                    </span>
                     &gt;= 95 percentile
                  </div>
                </button>
              </div>
              <div
                className="euiFlexItem euiFlexItem--flexGrow1"
              />
            </div>
            <div
              className="euiSpacer euiSpacer--m"
            />
            <hr
              className="euiHorizontalRule euiHorizontalRule--full"
            />
            Array [
              <div
                className="euiSpacer euiSpacer--xl"
              />,
              <div
                className="euiEmptyPrompt"
              >
                <h2
                  className="euiTitle euiTitle--medium"
                >
                  No matches
                </h2>
                <span
                  className="euiTextColor euiTextColor--subdued"
                >
                  <div
                    className="euiSpacer euiSpacer--m"
                  />
                  <div
                    className="euiText euiText--medium"
                  >
                    <div
                      className="euiText euiText--medium"
                    >
                      No data matches the selected filter. Clear the filter and/or increase the time range to see more results.
                    </div>
                  </div>
                </span>
              </div>,
              <div
                className="euiSpacer euiSpacer--xl"
              />,
            ]
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Trace Config component renders with one trace selected 1`] = `
<div>
  <div
    className="euiAccordion"
    data-test-subj="traceGroupsAccordion"
    onToggle={[Function]}
  >
    <div
      className="euiAccordion__triggerWrapper"
    >
      <button
        aria-controls="traceGroups"
        aria-expanded={false}
        className="euiAccordion__button"
        id="random_html_id"
        onClick={[Function]}
        type="button"
      >
        <span
          className="euiAccordion__iconWrapper"
        >
          <svg
            aria-hidden={true}
            className="euiIcon euiIcon--medium euiAccordion__icon"
            focusable="false"
            height={16}
            role="img"
            style={null}
            viewBox="0 0 16 16"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m5.157 13.069 4.611-4.685a.546.546 0 0 0 0-.768L5.158 2.93a.552.552 0 0 1 0-.771.53.53 0 0 1 .759 0l4.61 4.684c.631.641.63 1.672 0 2.312l-4.61 4.684a.53.53 0 0 1-.76 0 .552.552 0 0 1 0-.771Z"
              fillRule="nonzero"
            />
          </svg>
        </span>
        <span
          className="euiIEFlexWrapFix"
        >
          <div
            className="euiText euiText--small"
          >
            <h3>
              Trace groups
               
              <span
                className="euiBadge euiBadge--iconLeft"
                data-test-subj="traceGroupsCountBadge"
                style={
                  Object {
                    "backgroundColor": "#d3dae6",
                    "color": "#000",
                  }
                }
                title="0"
              >
                <span
                  className="euiBadge__content"
                >
                  0
                </span>
              </span>
            </h3>
          </div>
          <div
            className="euiSpacer euiSpacer--s"
          />
          <div
            className="euiText euiText--small"
          >
            <div
              className="euiTextColor euiTextColor--subdued"
            >
              Constrain your application to specific trace groups
            </div>
          </div>
        </span>
      </button>
      <div
        className="euiAccordion__optionalAction"
      >
        <button
          className="euiButton euiButton--primary euiButton--small euiButton-isDisabled"
          data-test-subj="clearTraceGroupsButton"
          disabled={true}
          onClick={[Function]}
          style={
            Object {
              "minWidth": undefined,
            }
          }
          type="button"
        >
          <span
            className="euiButtonContent euiButton__content"
          >
            <span
              className="euiButton__text"
            >
              Clear all
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      aria-labelledby="random_html_id"
      className="euiAccordion__childWrapper"
      id="traceGroups"
      role="region"
      tabIndex={-1}
    >
      <div>
        <div
          className="euiAccordion__padding--l"
        >
          <div
            className="euiFormRow"
            id="random_html_id-row"
          >
            <div
              className="euiFormRow__labelWrapper"
            >
              <label
                className="euiFormLabel euiFormRow__label"
                htmlFor="random_html_id"
              >
                Trace Groups
              </label>
            </div>
            <div
              className="euiFormRow__fieldWrapper"
            >
              <div
                aria-describedby="random_html_id-help-0"
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-label="Select trace groups"
                className="euiComboBox"
                data-test-subj="traceGroupsComboBox"
                onKeyDown={[Function]}
                role="combobox"
              >
                <div
                  className="euiFormControlLayout"
                >
                  <div
                    className="euiFormControlLayout__childrenWrapper"
                  >
                    <div
                      className="euiComboBox__inputWrap"
                      data-test-subj="comboBoxInput"
                      onClick={[Function]}
                      tabIndex={-1}
                    >
                      <p
                        className="euiComboBoxPlaceholder"
                      >
                        Select or add trace groups
                      </p>
                      <div
                        className="euiComboBox__input"
                        style={
                          Object {
                            "display": "inline-block",
                            "fontSize": 14,
                          }
                        }
                      >
                        <input
                          aria-controls=""
                          data-test-subj="comboBoxSearchInput"
                          id="random_html_id"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          role="textbox"
                          style={
                            Object {
                              "boxSizing": "content-box",
                              "width": "2px",
                            }
                          }
                          value=""
                        />
                        <div
                          style={
                            Object {
                              "height": 0,
                              "left": 0,
                              "overflow": "scroll",
                              "position": "absolute",
                              "top": 0,
                              "visibility": "hidden",
                              "whiteSpace": "pre",
                            }
                          }
                        />
                      </div>
                    </div>
                    <div
                      className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                    >
                      <button
                        aria-label="Open list of options"
                        className="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                        data-test-subj="comboBoxToggleListButton"
                        onClick={[Function]}
                        type="button"
                      >
                        <svg
                          aria-hidden={true}
                          className="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                          focusable="false"
                          height={16}
                          role="img"
                          style={null}
                          viewBox="0 0 16 16"
                          width={16}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                            fillRule="non-zero"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="euiFormHelpText euiFormRow__text"
                id="random_html_id-help-0"
              >
                Select one or multiple trace groups, or type a custom one
              </div>
            </div>
          </div>
          <div
            className="euiSpacer euiSpacer--l"
          />
          <div
            className="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
          >
            <div
              className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
            >
              <div
                className="euiFlexItem euiFlexItem--flexGrow10"
              >
                <div
                  className="euiText euiText--medium"
                >
                  <span
                    className="panel-title"
                  >
                    Latency by trace group
                  </span>
                  <span
                    className="panel-title-count"
                  >
                     (0)
                  </span>
                </div>
              </div>
              <div
                className="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <button
                  className="euiLink euiLink--primary"
                  data-test-subj="dashboard-table-percentile-button-1"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <div
                    className="euiText euiText--extraSmall"
                  >
                    <span
                      style={
                        Object {
                          "color": "#957ac9",
                        }
                      }
                    >
                      □
                    </span>
                     &lt; 95 percentile
                  </div>
                </button>
              </div>
              <div
                className="euiFlexItem euiFlexItem--flexGrow1"
              />
              <div
                className="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <button
                  className="euiLink euiLink--primary"
                  data-test-subj="dashboard-table-percentile-button-2"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <div
                    className="euiText euiText--extraSmall"
                  >
                    <span
                      style={
                        Object {
                          "color": "#957ac9",
                        }
                      }
                    >
                      ■
                    </span>
                     &gt;= 95 percentile
                  </div>
                </button>
              </div>
              <div
                className="euiFlexItem euiFlexItem--flexGrow1"
              />
            </div>
            <div
              className="euiSpacer euiSpacer--m"
            />
            <hr
              className="euiHorizontalRule euiHorizontalRule--full"
            />
            Array [
              <div
                className="euiSpacer euiSpacer--xl"
              />,
              <div
                className="euiEmptyPrompt"
              >
                <h2
                  className="euiTitle euiTitle--medium"
                >
                  No matches
                </h2>
                <span
                  className="euiTextColor euiTextColor--subdued"
                >
                  <div
                    className="euiSpacer euiSpacer--m"
                  />
                  <div
                    className="euiText euiText--medium"
                  >
                    <div
                      className="euiText euiText--medium"
                    >
                      No data matches the selected filter. Clear the filter and/or increase the time range to see more results.
                    </div>
                  </div>
                </span>
              </div>,
              <div
                className="euiSpacer euiSpacer--xl"
              />,
            ]
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
